# ecvt2_ws

./: MUJOCO_LOG.TXT  README.md  base_ee_taskspace_wbc.txt  final_upj5_upj6_joint_states.csv  near_time_paper_upj5_upj6_joint_states.csv  upj5_upj6_joint_states.csv  upper_robot_launch.txt
ecvt2_controller/: CMakeLists.txt  package.xml
ecvt2_controller/include/ecvt2_controller/: kdl_utils.hpp  wbc_hqp_lib.hpp
ecvt2_controller/src/: base_arm_task_controller.cpp  base_arm_task_controller_full.cpp  base_arm_task_controller_v2.cpp  base_opt_controller.cpp  com_trajectory_publisher.cpp  kdl_utils.cpp  live_upper_dynamics_node.cpp  pin_test.cpp  teleop_goal_publisher.cpp  vp_sto_global_planner_full_node.cpp  vp_sto_global_planner_node.cpp  vp_sto_paper_global_planner_node.cpp  wbc_hqp.cpp  wbc_hqp_lib.cpp  wbc_hqp_v2.cpp  wbc_hqp_v3.cpp
ecvt2_mjcf_v2/: ecvt_v2.xml  package.xml  scene.xml  simple_model_for_urdf.SLDASM.urdf  tire_test.xml
ecvt2_mjcf_v2/meshes/modified/: FL5.STL  FLD12.STL  FRD1.STL  FRD12.STL  FRD2.STL  FRW.STL  RL1.STL  RL2.STL  RLD02.STL  RLD1.STL  RR4.STL  RR5.STL  RRD02.STL  RRD1.STL  RRD12.STL  UP4.STL  UP5.STL
ecvt2_mjcf_v2/meshes/origin/: FL2.STL  FL4.STL  FLD2.STL  FR2.STL  FR5.STL  FRD02.STL  FRD4.STL  RL4.STL  RL5.STL  RLD2.STL  RLD4.STL  RR1.STL  RR3.STL  UP2.STL  UP6.STL
ecvt2_sim/: package.xml  setup.cfg  setup.py
ecvt2_sim/ecvt2_sim/: plot_passive_csv.py  test_robot_node.py  test_upper_node.py
ecvt2_sim/launch/: test_bringup.launch.py  test_full_vp_sto_bringup.launch.py  test_upper_bringup.launch.py
ecvt2_sim/rviz/: base_opt.rviz
forestry_robot_mjcf/: CMakeLists.txt  package.xml
forestry_robot_mjcf/asset/: FL1.STL  FL3.STL  FLD02.STL  FLD1.STL  FLD4.STL  FLW.STL  FR1.STL  FR3.STL  FR4.STL  RL3.STL  RLD12.STL  RLW.STL  RR2.STL  RRD2.STL  RRD4.STL  RRW.STL  UP3.STL
forestry_robot_mjcf/xml/: ecvt_v2.urdf  ecvt_v2.xml  ecvt_v2_simplify.urdf  ecvt_v2_upper.urdf  ecvt_v2_upper.xml  scene.xml  scene2.xml  scene2_upper.xml  simple_model_for_urdf.SLDASM_back.urdf  test_scene.xml
install/: local_setup.sh  setup.sh
install/ecvt2_controller/include/ecvt2_controller/: kdl_utils.hpp  wbc_hqp_lib.hpp
install/ecvt2_controller/lib/ecvt2_controller/: base_arm_task_controller  base_arm_task_controller_full  base_arm_task_controller_v2  base_opt_controller  com_trajectory_publisher  live_upper_dynamics_node  pin_test  teleop_goal_publisher  vp_sto_global_planner_full_node  vp_sto_global_planner_node  vp_sto_paper_global_planner_node  wbc_hqp  wbc_hqp_v2  wbc_hqp_v3
install/ecvt2_controller/share/ament_index/resource_index/package_run_dependencies/: ecvt2_controller
install/ecvt2_controller/share/ament_index/resource_index/parent_prefix_path/: ecvt2_controller
install/ecvt2_controller/share/ecvt2_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ecvt2_controller/share/ecvt2_controller/cmake/: ecvt2_controllerConfig-version.cmake  ecvt2_controllerConfig.cmake
install/ecvt2_controller/share/ecvt2_controller/environment/: ament_prefix_path.dsv  path.dsv
install/ecvt2_sim/lib/ecvt2_sim/: plot_passive_csv  plot_passive_joints  robot_node  sin_velocity_publisher  test_robot_node  test_upper_node  upper_node
install/ecvt2_sim/share/ecvt2_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ecvt2_sim/share/ecvt2_sim/launch/: bringup.launch.py  test_bringup.launch.py  test_full_vp_sto_bringup.launch.py  test_full_wbc_bringup.launch.py  test_upper_bringup.launch.py  upper_bringup.launch.py
install/ecvt2_sim/share/ecvt2_sim/rviz/: base_opt.rviz  ecvt.rviz
install/forestry_robot_mjcf/share/ament_index/resource_index/package_run_dependencies/: forestry_robot_mjcf
install/forestry_robot_mjcf/share/ament_index/resource_index/parent_prefix_path/: forestry_robot_mjcf
install/forestry_robot_mjcf/share/forestry_robot_mjcf/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/forestry_robot_mjcf/share/forestry_robot_mjcf/asset/: FL1.STL  FL2.STL  FL3.STL  FL4.STL  FL5.STL  FLD02.STL  FLD1.STL  FLD12.STL  FLD2.STL  FLD4.STL  FLW.STL  FR1.STL  FR2.STL  FR3.STL  FR4.STL  FR5.STL  FRD02.STL  FRD1.STL  FRD12.STL  FRD2.STL  FRD4.STL  FRW.STL  RL1.STL  RL2.STL  RL3.STL  RL4.STL  RL5.STL  RLD02.STL  RLD1.STL  RLD12.STL  RLD2.STL  RLD4.STL  RLW.STL  RR1.STL  RR2.STL  RR3.STL  RR4.STL  RR5.STL  RRD02.STL  RRD1.STL  (+12 more)
install/forestry_robot_mjcf/share/forestry_robot_mjcf/cmake/: forestry_robot_mjcfConfig-version.cmake  forestry_robot_mjcfConfig.cmake
install/forestry_robot_mjcf/share/forestry_robot_mjcf/environment/: ament_prefix_path.dsv  path.dsv
install/forestry_robot_mjcf/share/forestry_robot_mjcf/resource/: forestry_robot_mjcf
install/forestry_robot_mjcf/share/forestry_robot_mjcf/xml/: ecvt_v2.urdf  ecvt_v2.xml  ecvt_v2_simplify.urdf  ecvt_v2_upper.urdf  ecvt_v2_upper.xml  scene.xml  scene2.xml  scene2_upper.xml  simple_model_for_urdf.SLDASM_back.urdf  test_scene.xml  tire_test.xml
install/ifopt/lib/ifopt/: ifopt_core-test  ifopt_ipopt-example
install/ifopt/share/ifopt/: package.bash  package.sh  package.zsh
log/: latest_build
passive_joint_figures/: near_time_vs_proposed_seaborn_compare_summary.json  passive_terminal_summary.json  upj5_upj6_latest_summary.json
