<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ecvt2_controller</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="gunwoo00@hanyang.ac.kr">harco</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>std_msgs</depend>
  <depend>pinocchio</depend>
  <depend>ifopt</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
